--- a/user.html
+++ b/user.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -1666,8 +1666,7 @@ button:focus, a:focus {
 <div class="center-wrapper">
   <div class="responsive-element">
     <div class="text-content">
-    
-<h1 id="welcomeHeading" style="color: #ff9b00;>Hie</h1>
+<h1 id="welcomeHeading">Hie, <span id="user" style="color: #ff9b00;"></span></h1>
       <h1>Become Top 1% in the AI-First World</h1>
       <p>Whether it is Product, Growth, Design, Business, Tech or Data, Syncskill is the place to learn from top experts in the field to become the Top 1%</p>
       <button class="explore-button">
@@ -3494,117 +3493,160 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script type="module">
-import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
-const firebaseConfig = {
-  apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-  authDomain: "syncskilll.firebaseapp.com",
-  projectId: "syncskilll",
-  storageBucket: "syncskilll.firebasestorage.app",
-  messagingSenderId: "203322315096",
-  appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-  measurementId: "G-JWWWM2ZQSK"
-};
+  // Your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+    authDomain: "syncskilll.firebaseapp.com",
+    projectId: "syncskilll",
+    storageBucket: "syncskilll.firebasestorage.app",
+    messagingSenderId: "203322315096",
+    appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+    measurementId: "G-JWWWM2ZQSK"
+  };
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
 
-// DOM elements for user profile
-const elements = {
-  userAvatar: document.getElementById('userAvatar'),
-  mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-  userName: document.getElementById('userName'),
-  dropdownAvatar: document.getElementById('dropdownAvatar'),
-  dropdownName: document.getElementById('dropdownName'),
-  dropdownEmail: document.getElementById('dropdownEmail'),
-  mobileUserName: document.getElementById('mobileUserName'),
-  mobileUserEmail: document.getElementById('mobileUserEmail'),
-  welcomeUserSpan: document.getElementById('user')
-};
+  // DOM elements
+  const elements = {
+    userAvatar: document.getElementById('userAvatar'),
+    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
+    userName: document.getElementById('userName'),
+    dropdownAvatar: document.getElementById('dropdownAvatar'),
+    dropdownName: document.getElementById('dropdownName'),
+    dropdownEmail: document.getElementById('dropdownEmail'),
+    mobileUserName: document.getElementById('mobileUserName'),
+    mobileUserEmail: document.getElementById('mobileUserEmail'),
+    welcomeUserSpan: document.getElementById('user')
+  };
 
-// Clear sensitive data from DOM
-const clearUserProfile = () => {
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-  try {
-    if (elements.userName) elements.userName.textContent = '';
-    if (elements.dropdownName) elements.dropdownName.textContent = '';
-    if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-    if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
+  // Clear sensitive data from DOM
+  const clearUserProfile = () => {
+    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+    try {
+      if (elements.userName) elements.userName.textContent = '';
+      if (elements.dropdownName) elements.dropdownName.textContent = '';
+      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
+      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
+      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
+      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
 
-    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-      if (img) {
-        img.src = fallbackAvatar;
-        img.removeAttribute('srcset');
-      }
-    });
-  } catch (error) {
-    console.error('Error clearing profile:', error);
-  }
-};
+      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+        if (img) {
+          img.src = fallbackAvatar;
+          img.removeAttribute('srcset'); // Clear any cached image sources
+        }
+      });
+    } catch (error) {
+      console.error('Error clearing profile:', error);
+    }
+  };
 
-// Update user profile on the page
-const updateUserProfile = (user) => {
-  if (!user) {
-    clearUserProfile();
-    return;
-  }
-
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-  const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-  const email = user.email || 'No email provided';
-  const photoURL = user.photoURL || fallbackAvatar;
-
-  try {
-    if (elements.userName) elements.userName.textContent = displayName;
-    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-      if (img) {
-        img.src = photoURL;
-        img.onerror = () => img.src = fallbackAvatar;
-      }
-    });
-  } catch (error) {
-    console.error('Profile update error:', error);
-  }
-};
-
-// Ensure DOM is loaded before running auth listener
-document.addEventListener('DOMContentLoaded', () => {
-  onAuthStateChanged(auth, (user) => {
-    console.log('Auth state changed:', user); // Debug log
-    if (user) {
-      updateUserProfile(user);
-    } else {
+  // Update user profile on the page
+  const updateUserProfile = (user) => {
+    if (!user) {
       clearUserProfile();
+      return;
+    }
+
+    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
+    const email = user.email || 'No email provided';
+    const photoURL = user.photoURL || fallbackAvatar;
+
+    try {
+      if (elements.userName) elements.userName.textContent = displayName;
+      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
+      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
+      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
+      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
+      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
+
+      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+        if (img) {
+          img.src = photoURL;
+          img.onerror = () => img.src = fallbackAvatar;
+        }
+      });
+    } catch (error) {
+      console.error('Profile update error:', error);
+    }
+  };
+
+  // Auth state handling
+  const handleAuthState = (user) => {
+    if (!user) {
+      clearUserProfile(); // Clear DOM data immediately
+      window.location.href = '/login.html'; // Redirect to login
+      return;
+    }
+    updateUserProfile(user); // Update user profile if logged in
+  };
+
+  // Watch for auth state changes
+  onAuthStateChanged(auth, handleAuthState);
+
+  // Prevent back/forward cache (bfcache) from restoring sensitive data
+  window.addEventListener('unload', () => {
+    clearUserProfile(); // Clear DOM data on page unload
+  });
+
+  // Logout function
+  window.logout = async () => {
+    try {
+      await signOut(auth);
+      clearUserProfile(); // Clear DOM data before redirect
+      sessionStorage.clear(); // Clear session storage
+      localStorage.removeItem('userData'); // Clear specific localStorage keys if used
+      window.location.href = '/index.html'; // Redirect to login
+    } catch (error) {
+      console.error('Logout error:', error);
+      alert('Error during logout. Please try again.');
+    }
+  };
+
+  // Optional: Auto logout after inactivity (1 hour)
+  let inactivityTimer;
+  const resetSessionTimer = () => {
+    clearTimeout(inactivityTimer);
+    inactivityTimer = setTimeout(() => logout(), 3600000); // 1 hour
+  };
+  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
+    window.addEventListener(event, resetSessionTimer);
+  });
+  resetSessionTimer();
+
+  // Prevent browser back button from showing cached page
+  window.addEventListener('pageshow', (event) => {
+    if (event.persisted || window.performance?.navigation?.type === 2) {
+      // Page was restored from bfcache or back navigation
+      auth.currentUser ? updateUserProfile(auth.currentUser) : handleAuthState(null);
     }
   });
-});
-
-</scrip>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</script>
 </body>
 </html>
