--- a/user.html
+++ b/user.html
@@ -1039,108 +1039,94 @@ margin-left: 0px;
       </a>
       <div class="desktop-only" style="display: flex; align-items: center; gap: 40px;">
         <div style="position: relative;"
-    onmouseenter="
-        clearTimeout(window.menuTimeout);
-        const btn = this.querySelector('button');
-        const m = this.querySelector('.mega-menu');
-        const rect = btn.getBoundingClientRect();
-        m.style.top = rect.top + window.scrollY + btn.offsetHeight + 5 + 'px';
-        m.style.opacity = '1';
-        m.style.transform = 'translate(-50%, 0)';
-        m.style.pointerEvents = 'auto';
-    "
-    onmouseleave="
-        if (!window.menuOpen) {
-            const m = this.querySelector('.mega-menu');
-            window.menuTimeout = setTimeout(() => {
-                m.style.opacity = '0';
-                m.style.transform = 'translate(-50%, 8px)';
-                m.style.pointerEvents = 'none';
-            }, 300);
-        }
-    ">
-    
-    <button onclick="
-        const m = this.parentElement.querySelector('.mega-menu');
-        const rect = this.getBoundingClientRect();
-        m.style.top = rect.top + window.scrollY + this.offsetHeight + 5 + 'px';
-        m.style.opacity = '1';
-        m.style.transform = 'translate(-50%, 0)';
-        m.style.pointerEvents = 'auto';
-        window.menuOpen = true;
-    "
-    onmouseover="this.style.background='#f8f9fa'" 
-    onmouseout="this.style.background='transparent'"
-    style="display: flex; align-items: center; gap: 12px; padding: 12px 20px; background: transparent; border: none; cursor: pointer; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);">
-        <span style="font-family: 'Inter', system-ui, sans-serif; font-size: 15px; font-weight: 500; color: #333333; letter-spacing: 0.2px;">
-            Learning Paths
-        </span>
-        <svg style="width: 18px; height: 18px; color: #4d4d4d; transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);" 
-             viewBox="0 0 24 24" fill="none" stroke="currentColor">
-            <path d="M6 9l6 6 6-6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-    </button>
-
-    <div class="mega-menu"
-        onmouseenter="clearTimeout(window.menuTimeout)"
-        onmouseleave="
-            window.menuTimeout = setTimeout(() => {
-                const m = this;
-                m.style.opacity = '0';
-                m.style.transform = 'translate(-50%, 8px)';
-                m.style.pointerEvents = 'none';
-                window.menuOpen = false;
-            }, 300);
-        "
-               style="position: fixed; top: 0; left: 50%; width: 800px; background: #fff; border-radius: 16px; box-shadow: 0 24px 48px rgba(0,0,0,0.12); padding: 32px; opacity: 0; transform: translate(-50%,8px); transition: all 0.8s cubic-bezier(0.4,0,0.2,1); pointer-events: none;">
-            <div style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 32px;">
-              <div>
-                <div style="margin-bottom: 24px; padding-bottom: 16px; border-bottom: 1px solid #e9ecef;">
-                  <h3 style="font-size: 14px; font-weight: 700; color: #2d3436; letter-spacing: 0.25px; margin: 0; text-transform: uppercase;">Career Accelerators</h3>
+            onmouseenter="
+                clearTimeout(window.menuTimeout);
+                const btn = this.querySelector('button');
+                const m = this.querySelector('.mega-menu');
+                const rect = btn.getBoundingClientRect();
+                m.style.top = rect.top + window.scrollY + btn.offsetHeight + 5 + 'px';
+                m.style.opacity = '1';
+                m.style.transform = 'translate(-50%, 0)';
+                m.style.pointerEvents = 'auto';
+            "
+            onmouseleave="
+                const m = this.querySelector('.mega-menu');
+                window.menuTimeout = setTimeout(() => {
+                    m.style.opacity = '0';
+                    m.style.transform = 'translate(-50%, 8px)';
+                    m.style.pointerEvents = 'none';
+                }, 300);
+            ">
+            <button 
+                onmouseover="this.style.background='#f8f9fa'" 
+                onmouseout="this.style.background='transparent'"
+                style="display: flex; align-items: center; gap: 12px; padding: 12px 20px; background: transparent; border: none; cursor: pointer; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);">
+                <span style="font-family: 'Inter', system-ui, sans-serif; font-size: 15px; font-weight: 500; color: #333333; letter-spacing: 0.2px;">
+                    Learning Paths
+                </span>
+                <svg style="width: 18px; height: 18px; color: #4d4d4d; transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1);" 
+                     viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M6 9l6 6 6-6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </button>
+            <div class="mega-menu"
+                onmouseenter="clearTimeout(window.menuTimeout)"
+                onmouseleave="
+                    window.menuTimeout = setTimeout(() => {
+                        const m = this;
+                        m.style.opacity = '0';
+                        m.style.transform = 'translate(-50%, 8px)';
+                        m.style.pointerEvents = 'none';
+                    }, 300);
+                "
+                style="position: fixed; top: 0; left: 50%; width: 800px; background: #fff; border-radius: 16px; box-shadow: 0 24px 48px rgba(0,0,0,0.12); padding: 32px; opacity: 0; transform: translate(-50%,8px); transition: all 0.8s cubic-bezier(0.4,0,0.2,1); pointer-events: none;">
+                <div style="display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 32px;">
+                  <div>
+                    <div style="margin-bottom: 24px; padding-bottom: 16px; border-bottom: 1px solid #e9ecef;">
+                      <h3 style="font-size: 14px; font-weight: 700; color: #2d3436; letter-spacing: 0.25px; margin: 0; text-transform: uppercase;">Career Accelerators</h3>
+                    </div>
+                    <ul style="list-style: none; padding: 0; margin: 0; display: grid; gap: 12px;">
+                      <li>
+                        <a href="/courses.html" style="display: flex; align-items: center; padding: 12px 16px; border-radius: 8px; background: linear-gradient(95deg, #f8f9fa 0%, #ffffff 100%); border: 1px solid #f1f3f5; text-decoration: none; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);"
+                           onmouseover="this.style.transform='translateX(4px)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.05)'"
+                           onmouseout="this.style.transform='none'; this.style.boxShadow='none'">
+                          <div style="width: 32px; height: 32px; background: #6366f1; border-radius: 6px; margin-right: 12px; display: flex; align-items: center; justify-content: center;">
+                            <img src="your-icon.png" alt="Icon" style="width: 16px; height: 16px;" />
+                          </div>
+                          <div>
+                            <div style="font-size: 14px; font-weight: 600; color: #2d3436;">Data Science Pro</div>
+                            <div style="font-size: 12px; color: #6c757d; margin-top: 4px;">12 Courses · 98 Hours</div>
+                          </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div>
+                    <div style="margin-bottom: 24px; padding-bottom: 16px; border-bottom: 1px solid #e9ecef;">
+                      <h3 style="font-size: 14px; font-weight: 700; color: #2d3436; letter-spacing: 0.25px; margin: 0; text-transform: uppercase;">Certifications</h3>
+                    </div>
+                    <ul style="list-style: none; padding: 0; margin: 0; display: grid; gap: 12px;">
+                      <li>
+                        <a href="/courses.html" style="display: flex; align-items: center; padding: 12px 16px; border-radius: 8px; background: #ffffff; border: 1px solid #f1f3f5; text-decoration: none; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);"
+                           onmouseover="this.style.background='#f8f9fa'; this.style.borderColor='#e9ecef'"
+                           onmouseout="this.style.background='#ffffff'; this.style.borderColor='#f1f3f5'">
+                          <div style="width: 32px; height: 32px; background: #10b981; border-radius: 6px; margin-right: 12px;"></div>
+                          <div>
+                            <div style="font-size: 14px; font-weight: 600; color: #2d3436;">Cloud Architect</div>
+                            <div style="font-size: 12px; color: #6c757d; margin-top: 4px;">AWS · Azure · GCP</div>
+                          </div>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div id="featured-program">
+                    <span class="label">FEATURED PROGRAM</span>
+                    <h3 class="title">GenAI Mastery</h3>
+                    <p class="description">Master LLMs, Diffusion Models, and Production Deployment</p>
+                    <button class="cta-button">Explore Program</button>
+                  </div>
                 </div>
-                <ul style="list-style: none; padding: 0; margin: 0; display: grid; gap: 12px;">
-                  <li>
-                    <a href="/courses.html" style="display: flex; align-items: center; padding: 12px 16px; border-radius: 8px; background: linear-gradient(95deg, #f8f9fa 0%, #ffffff 100%); border: 1px solid #f1f3f5; text-decoration: none; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);"
-                       onmouseover="this.style.transform='translateX(4px)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.05)'"
-                       onmouseout="this.style.transform='none'; this.style.boxShadow='none'">
-                      <div style="width: 32px; height: 32px; background: #6366f1; border-radius: 6px; margin-right: 12px; display: flex; align-items: center; justify-content: center;">
-                        <img src="your-icon.png" alt="Icon" style="width: 16px; height: 16px;" />
-                      </div>
-                      <div>
-                        <div style="font-size: 14px; font-weight: 600; color: #2d3436;">Data Science Pro</div>
-                        <div style="font-size: 12px; color: #6c757d; margin-top: 4px;">12 Courses · 98 Hours</div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div>
-                <div style="margin-bottom: 24px; padding-bottom: 16px; border-bottom: 1px solid #e9ecef;">
-                  <h3 style="font-size: 14px; font-weight: 700; color: #2d3436; letter-spacing: 0.25px; margin: 0; text-transform: uppercase;">Certifications</h3>
-                </div>
-                <ul style="list-style: none; padding: 0; margin: 0; display: grid; gap: 12px;">
-                  <li>
-                    <a href="/courses.html" style="display: flex; align-items: center; padding: 12px 16px; border-radius: 8px; background: #ffffff; border: 1px solid #f1f3f5; text-decoration: none; transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);"
-                       onmouseover="this.style.background='#f8f9fa'; this.style.borderColor='#e9ecef'"
-                       onmouseout="this.style.background='#ffffff'; this.style.borderColor='#f1f3f5'">
-                      <div style="width: 32px; height: 32px; background: #10b981; border-radius: 6px; margin-right: 12px;"></div>
-                      <div>
-                        <div style="font-size: 14px; font-weight: 600; color: #2d3436;">Cloud Architect</div>
-                        <div style="font-size: 12px; color: #6c757d; margin-top: 4px;">AWS · Azure · GCP</div>
-                      </div>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              
-               <div id="featured-program">
-    <span class="label">FEATURED PROGRAM</span>
-    <h3 class="title">GenAI Mastery</h3>
-    <p class="description">Master LLMs, Diffusion Models, and Production Deployment</p>
-    <button class="cta-button">Explore Program</button>
-  </div>
             </div>
-          </div>
         </div>
         <div class="profile-menu" style="position: relative;">
           <div class="profile-trigger" onclick="toggleDropdown()" style="display: flex; align-items: center; gap: 12px; padding: 8px 16px; border-radius: 8px; cursor: pointer; transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); background: transparent;"
