--- a/user.html
+++ b/user.html
@@ -67,6 +67,13 @@ html, body {
 
 
     <!-- NAVBAR STYLES -->
+    header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Ensures it stays above other content */
+}
         .page-container {
             margin-left: 130px;
             margin-right: 130px;
