--- a/user.html
+++ b/user.html
@@ -2163,13 +2163,13 @@ body {
       <button style="flex: 1; padding: 12px; height: 40px; background: linear-gradient(to right, #7B61FF, #0F62FE); color: #FFFFFF; border: none; border-radius: 6px; cursor: pointer; font-weight: 500; transition: all 0.2s ease;"
               onmouseover="this.style.opacity='0.9'"
               onmouseout="this.style.opacity='1'"
-              onclick="window.location.href='course'"
+              onclick="window.location.href='course-1/course1.html'"
         >Syllabus</button>
       
       <button style="flex: 1; padding: 12px; height: 40px; background: #FFFFFF; color: #7B61FF; border: 1px solid #D0D0D0; border-radius: 6px; cursor: pointer; font-weight: 500; transition: all 0.2s ease;"
               onmouseover="this.style.backgroundColor='#F7F5FF'; this.style.borderColor='#7B61FF'"
               onmouseout="this.style.backgroundColor='#FFFFFF'; this.style.borderColor='#D0D0D0'"
-        onclick="window.location.href='course'">Know More</button>
+        onclick="window.location.href='course-1/course1.html'">Know More</button>
     </div>
   </div>
 </div>
