--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -386,7 +386,7 @@ html, body {
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       }
     }
-   </styles
+   </style>
 </head>
 <body>
  <header style="background: white; box-shadow: 0 1px 3px rgba(0,0,0,0.12); height: 72px; position: fixed; top: 0; left: 0; width: 100%; z-index: 100;">
