--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -843,6 +843,13 @@ html, body {
   </svg>
   <span>Apply Now</span>
 </button>
+            <button class="seo-btn seo-btn--apply" onclick="location.href='payment.html'">
+  <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
+  </svg>
+  <span>Apply Now</span>
+</button>
+
             <button class="seo-btn seo-btn--download">
               <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12m0 0l-3-3m3 3l3-3M5 21h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v14a2 2 0 002 2z"/>
