--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -785,11 +785,16 @@ html, body {
 
           <section class="section-image-left">
     <div class="section-image-left__container">
-      <div class="section-image-left__image-wrapper">
+      <div class="section-image-left__image-wrapper" onclick="window.location.href = './payment.html'" type="button">
         <img src="https://d3kl8zsmmx4oop.cloudfront.net/SEO_4be34a6ed1_07b92bff39.webp" alt="SEO Course" class="seo-image-box__image">
         <div class="section-image-left__buttons-desktop">
           <div class="seo-image-box__buttons">
             <button class="seo-btn seo-btn--apply">
+
+
+               
+
+              
               <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
               </svg>
