--- a/user.html
+++ b/user.html
@@ -3487,7 +3487,6 @@ body {
   import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
-  // Firebase configuration
   const firebaseConfig = {
     apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
     authDomain: "syncskilll.firebaseapp.com",
@@ -3498,135 +3497,111 @@ body {
     measurementId: "G-JWWWM2ZQSK"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
-  // DOM elements
-  const elements = {
-    userAvatar: document.getElementById('userAvatar'),
-    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-    userName: document.getElementById('userName'),
-    dropdownAvatar: document.getElementById('dropdownAvatar'),
-    dropdownName: document.getElementById('dropdownName'),
-    dropdownEmail: document.getElementById('dropdownEmail'),
-    mobileUserName: document.getElementById('mobileUserName'),
-    mobileUserEmail: document.getElementById('mobileUserEmail'),
-    welcomeUserSpan: document.getElementById('user')
-  };
+  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
 
-  // Clear user profile
-  const clearUserProfile = () => {
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset');
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
-    }
-  };
-
-  // Update user profile
-  const updateUserProfile = (user) => {
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  function updateProfile(user) {
     const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email provided';
+    const email = user.email || '';
     const photoURL = user.photoURL || fallbackAvatar;
 
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
+    const setText = (id, text) => {
+      const el = document.getElementById(id);
+      if (el) el.textContent = text;
+    };
 
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-    } catch (error) {
-      console.error('Profile update error:', error);
-    }
-  };
-
-  // Auth state handling
-  let authChecked = false;
-  const handleAuthState = (user) => {
-    authChecked = true;
-    if (!user) {
-      clearUserProfile();
-      window.location.href = '/login.html';
-    } else {
-      updateUserProfile(user);
-    }
-  };
-
-  // Listen for auth changes
-  onAuthStateChanged(auth, handleAuthState);
-
-  // Fix back-button behavior with BFCache
-  window.addEventListener('pageshow', (event) => {
-    if (event.persisted || window.performance?.navigation?.type === 2) {
-      if (!authChecked) {
-        const user = auth.currentUser;
-        if (user) {
-          updateUserProfile(user); // Already logged in
-        } else {
-          window.location.href = '/login.html'; // Not logged in
-        }
+    const setImage = (id, url) => {
+      const img = document.getElementById(id);
+      if (img) {
+        img.src = url;
+        img.onerror = () => img.src = fallbackAvatar;
       }
+    };
+
+    setText('userName', displayName);
+    setText('dropdownName', displayName);
+    setText('mobileUserName', displayName);
+    setText('dropdownEmail', email);
+    setText('mobileUserEmail', email);
+    setText('user', displayName);
+
+    ['userAvatar', 'dropdownAvatar', 'mobileUserAvatar'].forEach(id => setImage(id, photoURL));
+  }
+
+  function clearProfile() {
+    ['userName', 'dropdownName', 'mobileUserName', 'dropdownEmail', 'mobileUserEmail', 'user'].forEach(id => {
+      const el = document.getElementById(id);
+      if (el) el.textContent = '';
+    });
+
+    ['userAvatar', 'dropdownAvatar', 'mobileUserAvatar'].forEach(id => {
+      const img = document.getElementById(id);
+      if (img) img.src = fallbackAvatar;
+    });
+  }
+
+  function handleUser(user) {
+    if (user) {
+      updateProfile(user);
+    } else {
+      clearProfile();
+      window.location.href = "/login.html";
+    }
+  }
+
+  // 1. Track if onAuthStateChanged has been called
+  let authResolved = false;
+
+  // 2. Main auth listener
+  onAuthStateChanged(auth, (user) => {
+    authResolved = true;
+    handleUser(user);
+  });
+
+  // 3. Handle back/forward navigation (BFCache)
+  window.addEventListener('pageshow', (event) => {
+    if (event.persisted || performance.getEntriesByType("navigation")[0]?.type === "back_forward") {
+      setTimeout(() => {
+        if (!authResolved) {
+          const user = auth.currentUser;
+          if (user) {
+            updateProfile(user); // Safe fallback
+          } else {
+            window.location.href = "/login.html";
+          }
+        }
+      }, 100); // slight delay to allow Firebase to hydrate
     }
   });
 
-  // Clear sensitive data on unload
-  window.addEventListener('unload', () => {
-    clearUserProfile();
-  });
-
-  // Logout function
+  // 4. Logout
   window.logout = async () => {
     try {
       await signOut(auth);
-      clearUserProfile();
+      clearProfile();
       sessionStorage.clear();
-      localStorage.removeItem('userData');
+      localStorage.clear();
       window.location.href = '/index.html';
-    } catch (error) {
-      console.error('Logout error:', error);
-      alert('Error during logout. Please try again.');
+    } catch (e) {
+      console.error("Logout error", e);
+      alert("Logout failed. Try again.");
     }
   };
 
-  // Auto logout after inactivity (1 hour)
+  // 5. Auto logout after 1 hour of inactivity
   let inactivityTimer;
-  const resetSessionTimer = () => {
+  const resetInactivityTimer = () => {
     clearTimeout(inactivityTimer);
-    inactivityTimer = setTimeout(() => logout(), 3600000);
+    inactivityTimer = setTimeout(() => logout(), 60 * 60 * 1000);
   };
-  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-    window.addEventListener(event, resetSessionTimer);
-  });
-  resetSessionTimer();
+  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(evt =>
+    window.addEventListener(evt, resetInactivityTimer)
+  );
+  resetInactivityTimer();
 </script>
+
 
 </body>
 </html>
